--- a/dev/index.html
+++ b/dev/index.html
@@ -3,11 +3,14 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no, shrink-to-fit=no" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet" />
     <title>Dev Widget</title>
     <style>
       html,
       body {
         margin: 0;
+        font-family: "Roboto", sans-serif;
       }
     </style>
   </head>
